--- a/templates/default/contents.html
+++ b/templates/default/contents.html
@@ -1,17 +1,17 @@
 <section class='contents'>
   <h1>Contents</h1>
-  <ul class='chapters'>
+  <ol class='chapters'>
     <% for chapter in book.chapters %>
     <li>
       <a href="<%= chapter.permalink %>.html"><%= chapter.title %></a>
       <% unless chapter.sections.empty? %>
-      <ul>
+      <ol type='i'>
         <% for key, title in chapter.sections %>
         <li><a href="<%=chapter.permalink%>.html#<%=key%>"><%=title%></a></li>
         <% end %>
-      </ul>
+      </ol>
       <% end %>
     </li>
     <% end%>
-  </ul>
+  </ol>
 </section>
